environments/marek-dev/apps/app-taxi/services/taxi/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: taxi
    app.kubernetes.io/part-of: app-taxi
    app.openshift.io/runtime: nginx
  name: taxi
  namespace: marek-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taxi
      app.kubernetes.io/part-of: app-taxi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: taxi
        app.kubernetes.io/part-of: app-taxi
    spec:
      containers:
      - image: quay.io/mmartofe/cicd:main-0c4bc5627c8cd64c2d1a049eba7e159e7a6d070e
        imagePullPolicy: Always
        name: taxi
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
